manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-classifier-gpu
  namespace: aszen-ai-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ai-classifier-gpu

  template:
    metadata:
      labels:
        app: ai-classifier-gpu

    spec:
      imagePullSecrets:
        - name: nexus-registry

      containers:
        - name: ai-classifier-gpu

          image: nexus-registry.proxmox-ocp-ha.ocpai.com/ai-classifier-gpu:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
              nvidia.com/gpu: "1"

            limits:
              cpu: "1"
              memory: "1Gi"
              nvidia.com/gpu: "1"
