manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-classifier-gpu
  namespace: aszen-ai-dev
spec:
  selector:
    app: ai-classifier-gpu
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
